--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -30,7 +30,7 @@
                     <span class="hide-menu">FUNCTIONS</span>
                 </li>
                 <li class="sidebar-item">
-                    <a class="sidebar-link" th:href="@{/}" aria-expanded="false">
+                    <a class="sidebar-link" th:href="@{/admin/cruds/categories}" aria-expanded="false">
                 <span>
                   <iconify-icon th:icon="@{solar:layers-minimalistic-bold-duotone}"></iconify-icon>
                 </span>
