--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -20,7 +20,8 @@
         <div class="col-lg-4">
             <div class="card">
                 <div class="card-body text-center">
-                    <img src="../assets/images/backgrounds/product-tip.png" alt="image" class="img-fluid" width="205">
+                    <img th:src="@{/assets/admin/resource_admin/images/backgrounds/product-tip.png}" alt="image"
+                         class="img-fluid" width="205">
                     <h4 class="mt-7">Productivity Tips!</h4>
                     <p class="card-subtitle mt-2 mb-3">Duis at orci justo nulla in libero id leo
                         molestie sodales phasellus justo.</p>
@@ -177,11 +178,12 @@
             <div class="card overflow-hidden hover-img">
                 <div class="position-relative">
                     <a href="javascript:void(0)">
-                        <img src="../assets/images/blog/blog-img1.jpg" class="card-img-top" alt="matdash-img">
+                        <img th:src="@{/assets/admin/resource_admin/images/blog/blog-img1.jpg}" class="card-img-top"
+                             alt="matdash-img">
                     </a>
                     <span class="badge text-bg-light text-dark fs-2 lh-sm mb-9 me-9 py-1 px-2 fw-semibold position-absolute bottom-0 end-0">2
                 min Read</span>
-                    <img src="../assets/images/profile/user-3.jpg" alt="matdash-img"
+                    <img th:src="@{/assets/admin/resource_admin/images/profile/user-3.jpg}" alt="matdash-img"
                          class="img-fluid rounded-circle position-absolute bottom-0 start-0 mb-n9 ms-9" width="40"
                          height="40" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Georgeanna Ramero">
                 </div>
@@ -209,11 +211,12 @@
             <div class="card overflow-hidden hover-img">
                 <div class="position-relative">
                     <a href="javascript:void(0)">
-                        <img src="../assets/images/blog/blog-img2.jpg" class="card-img-top" alt="matdash-img">
+                        <img th:src="@{/assets/admin/resource_admin/images/blog/blog-img2.jpg}" class="card-img-top"
+                             alt="matdash-img">
                     </a>
                     <span class="badge text-bg-light text-dark fs-2 lh-sm mb-9 me-9 py-1 px-2 fw-semibold position-absolute bottom-0 end-0">2
                 min Read</span>
-                    <img src="../assets/images/profile/user-2.jpg" alt="matdash-img"
+                    <img th:src="@{/assets/admin/resource_admin/images/profile/user-2.jpg}" alt="matdash-img"
                          class="img-fluid rounded-circle position-absolute bottom-0 start-0 mb-n9 ms-9" width="40"
                          height="40" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Georgeanna Ramero">
                 </div>
@@ -240,11 +243,12 @@
             <div class="card overflow-hidden hover-img">
                 <div class="position-relative">
                     <a href="javascript:void(0)">
-                        <img src="../assets/images/blog/blog-img3.jpg" class="card-img-top" alt="matdash-img">
+                        <img th:src="@{/assets/admin/resource_admin/images/blog/blog-img3.jpg}" class="card-img-top"
+                             alt="matdash-img">
                     </a>
                     <span class="badge text-bg-light text-dark fs-2 lh-sm mb-9 me-9 py-1 px-2 fw-semibold position-absolute bottom-0 end-0">2
                 min Read</span>
-                    <img src="../assets/images/profile/user-3.jpg" alt="matdash-img"
+                    <img th:src="@{/assets/admin/resource_admin/images/profile/user-3.jpg}" alt="matdash-img"
                          class="img-fluid rounded-circle position-absolute bottom-0 start-0 mb-n9 ms-9" width="40"
                          height="40" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Georgeanna Ramero">
                 </div>
@@ -267,12 +271,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="py-6 px-6 text-center">
-            <p class="mb-0 fs-4">Design and Developed by <a href="https://adminmart.com/" target="_blank"
-                                                            class="pe-1 text-primary text-decoration-underline">AdminMart.com</a>Distributed
-                by <a href="https://themewagon.com/" target="_blank"
-                      class="pe-1 text-primary text-decoration-underline">ThemeWagon</a></p>
         </div>
     </div>
 </div>
