--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,4 +3,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" th:href="@{/assets/admin/resource_admin/images/logos/seodashlogo.png}"/>
     <link rel="stylesheet" th:href="@{/assets/admin/resource_admin/css/styles.min.css}"/>
+    <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css}">
 </div>
