--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                        aria-expanded="false">
-                        <img th:src="@{/assets/images/profile/user-1.jpg}" alt="" width="35" height="35"
+                        <img th:src="@{/assets/admin/resource_admin/images/profile/user-1.jpg}" alt="" width="35"
+                             height="35"
                              class="rounded-circle">
                     </a>
                     <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
