--- a/src/main/resources/templates/admin/cruds/categories.html
+++ b/src/main/resources/templates/admin/cruds/categories.html
@@ -17,7 +17,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title d-flex align-items-center gap-2 mb-4">
-                                Danh mục sản phẩm
+                                Quản lý danh mục
                                 <span>
                                 <iconify-icon icon="solar:question-circle-bold" class="fs-7 d-flex text-muted"
                                               data-bs-toggle="tooltip" data-bs-placement="top"
