--- a/src/main/resources/templates/admin/cruds/products.html
+++ b/src/main/resources/templates/admin/cruds/products.html
@@ -9,7 +9,63 @@
     <div th:replace="fragments/sidebar :: sidebar"></div>
     <!--Main wrapped-->
     <div class="body-wrapper">
-
+        <div th:replace="fragments/header :: header"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title d-flex align-items-center gap-2 mb-4">
+                                Quản lý sản phẩm
+                            </h5>
+                            <table class="table table-striped table-bordered">
+                                <thead class="table-dark">
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">Ram</th>
+                                    <th scope="col">Battery Capacity</th>
+                                    <th scope="col">Monitor</th>
+                                    <th scope="col">Quantity</th>
+                                    <th scope="col">Thumbnail</th>
+                                    <th scope="col">Category</th>
+                                    <th scope="col">Brand</th>
+                                    <th scope="col">Manager</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="product : ${products}">
+                                    <td th:text="${product.getId()}"></td>
+                                    <td th:text="${product.name}"></td>
+                                    <td th:text="${product.price}"></td>
+                                    <td th:text="${product.description}"></td>
+                                    <td th:text="${product.ram}"></td>
+                                    <td th:text="${product.batteryCapacity}"></td>
+                                    <td th:text="${product.monitor}"></td>
+                                    <td th:text="${product.quantity}"></td>
+                                    <td>
+                                        <img th:src="@{'/uploads' + ${product.thumbnail}}" alt="Ảnh sản phẩm"
+                                             width="100px;">
+                                    </td>
+                                    <td th:text="${product.category}"></td>
+                                    <td th:text="${product.brand}"></td>
+                                    <td>
+                                        <a class="btn btn-warning btn-sm"
+                                           th:href="@{/products/edit (id=${product.id})}">Edit</a>
+                                        <a class="btn btn-danger btn-sm"
+                                           th:href="@{/products/delete (id=${product.id})}"
+                                           onclick="return confirm('Are you sure?')">Delete</a>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
