add complete user page

--- a/src/main/resources/templates/fragments_user/content.html
+++ b/src/main/resources/templates/fragments_user/content.html
@@ -9,7 +9,7 @@
                 <div class="col-md-4 col-xs-6">
                     <div class="shop">
                         <div class="shop-img">
-                            <img src="./img/shop01.png" alt="">
+                            <img th:src="@{assets/user/img/shop01.png}" alt="">
                         </div>
                         <div class="shop-body">
                             <h3>Laptop<br>Collection</h3>
@@ -23,7 +23,7 @@
                 <div class="col-md-4 col-xs-6">
                     <div class="shop">
                         <div class="shop-img">
-                            <img src="./img/shop03.png" alt="">
+                            <img th:src="@{assets/user/img/shop03.png}" alt="">
                         </div>
                         <div class="shop-body">
                             <h3>Accessories<br>Collection</h3>
@@ -37,7 +37,7 @@
                 <div class="col-md-4 col-xs-6">
                     <div class="shop">
                         <div class="shop-img">
-                            <img src="./img/shop02.png" alt="">
+                            <img th:src="@{assets/user/img/shop02.png}" alt="">
                         </div>
                         <div class="shop-body">
                             <h3>Cameras<br>Collection</h3>
@@ -86,7 +86,7 @@
                                     <!-- product -->
                                     <div class="product">
                                         <div class="product-img">
-                                            <img src="./img/product01.png" alt="">
+                                            <img th:src="@{assets/user/img/product01.png}" alt="">
                                             <div class="product-label">
                                                 <span class="sale">-30%</span>
                                                 <span class="new">NEW</span>
@@ -125,7 +125,7 @@
                                     <!-- product -->
                                     <div class="product">
                                         <div class="product-img">
-                                            <img src="./img/product02.png" alt="">
+                                            <img th:src="@{assets/user/img/product02.png}" alt="">
                                             <div class="product-label">
                                                 <span class="new">NEW</span>
                                             </div>
@@ -163,7 +163,7 @@
                                     <!-- product -->
                                     <div class="product">
                                         <div class="product-img">
-                                            <img src="./img/product03.png" alt="">
+                                            <img th:src="@{assets/user/img/product03.png}" alt="">
                                             <div class="product-label">
                                                 <span class="sale">-30%</span>
                                             </div>
@@ -196,7 +196,7 @@
                                     <!-- product -->
                                     <div class="product">
                                         <div class="product-img">
-                                            <img src="./img/product04.png" alt="">
+                                            <img th:src="@{assets/user/img/product04.png}" alt="">
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">Category</p>
@@ -231,7 +231,7 @@
                                     <!-- product -->
                                     <div class="product">
                                         <div class="product-img">
-                                            <img src="./img/product05.png" alt="">
+                                            <img th:src="@{assets/user/img/product05.png}" alt="">
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">Category</p>
@@ -356,7 +356,7 @@
                                     <!-- product -->
                                     <div class="product">
                                         <div class="product-img">
-                                            <img src="./img/product06.png" alt="">
+                                            <img th:src="@{assets/user/img/product06.png}" alt="">
                                             <div class="product-label">
                                                 <span class="sale">-30%</span>
                                                 <span class="new">NEW</span>
@@ -395,7 +395,7 @@
                                     <!-- product -->
                                     <div class="product">
                                         <div class="product-img">
-                                            <img src="./img/product07.png" alt="">
+                                            <img th:src="@{assets/user/img/product07.png}" alt="">
                                             <div class="product-label">
                                                 <span class="new">NEW</span>
                                             </div>
@@ -433,7 +433,7 @@
                                     <!-- product -->
                                     <div class="product">
                                         <div class="product-img">
-                                            <img src="./img/product08.png" alt="">
+                                            <img th:src="@{assets/user/img/product08.png}" alt="">
                                             <div class="product-label">
                                                 <span class="sale">-30%</span>
                                             </div>
@@ -466,7 +466,7 @@
                                     <!-- product -->
                                     <div class="product">
                                         <div class="product-img">
-                                            <img src="./img/product09.png" alt="">
+                                            <img th:src="@{assets/user/img/product09.png}" alt="">
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">Category</p>
@@ -501,7 +501,7 @@
                                     <!-- product -->
                                     <div class="product">
                                         <div class="product-img">
-                                            <img src="./img/product01.png" alt="">
+                                            <img th:src="@{assets/user/img/product01.png}" alt="">
                                         </div>
                                         <div class="product-body">
                                             <p class="product-category">Category</p>
@@ -566,7 +566,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product07.png" alt="">
+                                    <img th:src="@{assets/user/img/product07.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -581,7 +581,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product08.png" alt="">
+                                    <img th:src="@{assets/user/img/product08.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -596,7 +596,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product09.png" alt="">
+                                    <img th:src="@{assets/user/img/product09.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -613,7 +613,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product01.png" alt="">
+                                    <img th:src="@{assets/user/img/product01.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -628,7 +628,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product02.png" alt="">
+                                    <img th:src="@{assets/user/img/product02.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -643,7 +643,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product03.png" alt="">
+                                    <img th:src="@{assets/user/img/product03.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -671,7 +671,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product04.png" alt="">
+                                    <img th:src="@{assets/user/img/product04.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -686,7 +686,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product05.png" alt="">
+                                    <img th:src="@{assets/user/img/product05.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -701,7 +701,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product06.png" alt="">
+                                    <img th:src="@{assets/user/img/product06.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -718,7 +718,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product07.png" alt="">
+                                    <img th:src="@{assets/user/img/product07.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -733,7 +733,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product08.png" alt="">
+                                    <img th:src="@{assets/user/img/product08.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -748,7 +748,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product09.png" alt="">
+                                    <img th:src="@{assets/user/img/product09.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -778,7 +778,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product01.png" alt="">
+                                    <img th:src="@{assets/user/img/product01.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -793,7 +793,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product02.png" alt="">
+                                    <img th:src="@{assets/user/img/product02.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -808,7 +808,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product03.png" alt="">
+                                    <img th:src="@{assets/user/img/product03.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -825,7 +825,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product04.png" alt="">
+                                    <img th:src="@{assets/user/img/product04.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -840,7 +840,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product05.png" alt="">
+                                    <img th:src="@{assets/user/img/product05.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
@@ -855,7 +855,7 @@
                             <!-- product widget -->
                             <div class="product-widget">
                                 <div class="product-img">
-                                    <img src="./img/product06.png" alt="">
+                                    <img th:src="@{assets/user/img/product06.png}" alt="">
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">Category</p>
