--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<head th:replace="fragments_user/head :: head">
+    <title th:text="${pageTitle}">Title</title>
 </head>
 <body>
-
+<div th:replace="fragments_user/header :: header"></div>
+<div th:replace="fragments_user/navigation :: navigation"></div>
+<div th:replace="fragments_user/content :: content"></div>
+<div th:replace="fragments_user/footer :: footer"></div>
+<div th:replace="fragments_user/scripts :: script"></div>
 </body>
 </html>
