--- a/src/main/resources/templates/admin/products/index.html
+++ b/src/main/resources/templates/admin/products/index.html
@@ -18,6 +18,8 @@
                             <h5 class="card-title d-flex align-items-center gap-2 mb-4">
                                 Quản lý sản phẩm
                             </h5>
+                            <a class="btn btn-primary text-white mb-3" th:href="@{/admin/products/create}">Create
+                                product</a>
                             <table class="table table-striped table-bordered">
                                 <thead class="table-dark">
                                 <tr>
@@ -49,14 +51,16 @@
                                         <img th:src="@{'/uploads' + ${product.thumbnail}}" alt="Ảnh sản phẩm"
                                              width="100px;">
                                     </td>
-                                    <td th:text="${product.category}"></td>
-                                    <td th:text="${product.brand}"></td>
+                                    <td th:text="${product.category.name}"></td>
+                                    <td th:text="${product.brand.name}"></td>
                                     <td>
-                                        <a class="btn btn-warning btn-sm"
-                                           th:href="@{/products/edit (id=${product.id})}">Edit</a>
-                                        <a class="btn btn-danger btn-sm"
-                                           th:href="@{/products/delete (id=${product.id})}"
-                                           onclick="return confirm('Are you sure?')">Delete</a>
+                                        <div class="d-flex">
+                                            <a class="btn btn-warning btn-sm mx-2" style="width: 70px;"
+                                               th:href="@{/products/edit (id=${product.id})}">Edit</a>
+                                            <a class="btn btn-danger btn-sm" style="width: 70px;"
+                                               th:href="@{/products/delete (id=${product.id})}"
+                                               onclick="return confirm('Are you sure?')">Delete</a>
+                                        </div>
                                     </td>
                                 </tr>
                                 </tbody>
