add form update

--- a/src/main/resources/templates/admin/products/CreateProduct.html
+++ b/src/main/resources/templates/admin/products/CreateProduct.html
@@ -86,7 +86,7 @@
                     <button class="col-md-6 btn btn-primary mx-3" style="width: 300px;">
                         Create product
                     </button>
-                    <button class="col-md-6 btn btn-secondary" style="width: 300px;">Cancel</button>
+                    <a class="col-md-6 btn btn-secondary mx-3" style="width: 300px; text-align: center;">Cancel</a>
                 </div>
             </form>
         </div>
