--- a/src/main/resources/templates/admin/products/index.html
+++ b/src/main/resources/templates/admin/products/index.html
@@ -56,7 +56,7 @@
                                     <td>
                                         <div class="d-flex">
                                             <a class="btn btn-warning btn-sm mx-2" style="width: 70px;"
-                                               th:href="@{/products/edit (id=${product.id})}"><i
+                                               th:href="@{/admin/products/update (id=${product.id})}"><i
                                                     class="bi bi-pencil-square"></i> Edit</a>
                                             <a class="btn btn-danger btn-sm" style="width: 70px;"
                                                th:href="@{/products/delete (id=${product.id})}"
